--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,1 +1,23 @@
+:root {
+    --navbar-width: 25%;
+}
 
+body {
+    padding-left: var(--navbar-width);
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style-type: none;
+    display: inline-block;
+}
+
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
