--- a/client/app/telegram/authorization/authorization.css
+++ b/client/app/telegram/authorization/authorization.css
@@ -14,10 +14,10 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: rgba(25, 25, 25, 1);
-    /* background: url('./assets/background.jpg')
-    no-repeat; */
-    background-size: cover;
-    background-position: center;
+    /* background: rgba(25, 25, 25, 1); */
+    /* background: url('/telegram/assets/background.jpg') */
+    /* no-repeat; */
+    /* background-size: cover; */
+    /* background-position: center; */
 }
 
