--- a/client/app/telegram/authorization/login/LoginForm/LoginForm.module.css
+++ b/client/app/telegram/authorization/login/LoginForm/LoginForm.module.css
@@ -14,14 +14,14 @@
     text-align: center;
 }
 
-.wrapper .input-box{
+.wrapper .inputBox{
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
 }
 
-.input-box input{
+.inputBox input{
     width: 100%;
     height: 100%;
     background: transparent;
@@ -33,11 +33,11 @@
     padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder{
+.inputBox input::placeholder{
     color: #fff;
 }
 
-.input-box .icon{
+.inputBox .icon{
     position: absolute;
     right: 20px;
     top: 50%;
@@ -45,24 +45,24 @@
     font-size: 16px;
 }
 
-.wrapper .remember-forgot{
+.wrapper .rememberForgot{
     display: flex;
     justify-content: space-between;
     font-size: 14.5px; 
     margin: -15px 0 15px;
 }
 
-.remember-forgot label input{
+.rememberForgot label input{
     accent-color: #fff;
     margin-right: 4px;
 }
 
-.remember-forgot a{
+.rememberForgot a{
     color: #fff;
     text-decoration: none;
 }
 
-.remember-forgot a:hover{
+.rememberForgot a:hover{
     text-decoration: underline;
 }
 
@@ -80,18 +80,18 @@
     font-weight: 700;
 }
 
-.wrapper .register-link{
+.wrapper .registerLink{
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
 
-.register-link p a {
+.registerLink p a {
     color: #fff;
     text-decoration: none;
     font-weight: 600;
 }
 
-.register-link p a:hover{
+.registerLink p a:hover{
     text-decoration: underline;
 }
