navBar Telegram authentification logic is done

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -19,7 +19,11 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+
+  background: no-repeat;
+  background-size: cover;
 }
+
 
 p {
     margin: 0;
