--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
   min-height: 100vh;
 
   background: no-repeat;
@@ -40,3 +41,5 @@ ul {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+
