initial chat messages design

--- a/client/app/realTimeChat/list/chatList/chatList.module.css
+++ b/client/app/realTimeChat/list/chatList/chatList.module.css
@@ -1,3 +1,22 @@
+
+.chatList::-webkit-scrollbar {
+  width: 8px;
+}
+
+.chatList::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.chatList::-webkit-scrollbar-thumb {
+  background: rgba(17, 25, 40, 0.5);
+  border-radius: 10px;
+}
+
+.chatList{
+  overflow-y: auto;
+  flex: 1;
+}
+
 .chatList .search {
     display: flex;
     align-items: center;
@@ -36,5 +55,35 @@
     border-radius: 10px;
     cursor: pointer;
   }
+
+.chatList .item{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  cursor: pointer;
+  border-bottom: 1px solid #dddddd35;
+}
   
+.chatList .item .avatarImg{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.chatList .item .texts{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.chatList .item .texts .span{
+  font-weight: 500;
+}
+
+.chatList .item .texts .p{
+  font-size: 14px;
+  font-weight: 300;
+}
   
