--- a/client/app/realTimeChat/detail/detail.module.css
+++ b/client/app/realTimeChat/detail/detail.module.css
@@ -1,3 +1,49 @@
 .detail{
     flex: 1;
 }
+
+.detail .user {
+    padding: 30px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    border-bottom: 1px solid #dddddd35;
+  }
+
+  .detail .user .avatarImg {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .detail .info {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+  
+  .detail .info .option .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .detail .info .option .title .imgI {
+    width: 30px;
+    height: 30px;
+    background-color: rgba(17, 25, 40, 0.3);
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+
+  .detail .info .option .photos .photoItem .photoDetail .img {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    object-fit: cover;
+  }
