--- a/client/app/components/messageItem/messageItem.css
+++ b/client/app/components/messageItem/messageItem.css
@@ -1,8 +1,9 @@
 .message {
-    border: 1px solid black;
+    border: 1px solid var(--main-color);
     padding: 5px;
     position: relative;
     max-width: 40vw;
+    backdrop-filter: blur(40px);
 }
 
 .message .time {
