--- a/client/app/components/dialogItem/dialogItem.css
+++ b/client/app/components/dialogItem/dialogItem.css
@@ -4,7 +4,8 @@
   align-items: center;
   padding: 10px;
   width: 300px;
-  border: 1px solid black;
+  border: 1px solid var(--main-color);
+  backdrop-filter: blur(40px);
 }
 
 
