img and video showing

--- a/client/app/telegram/chat/chat.module.css
+++ b/client/app/telegram/chat/chat.module.css
@@ -104,6 +104,7 @@
     height: 300px;
     border-radius: 10px;
     object-fit: cover;
+    margin-bottom: -12px;
   }
   
   .chat .center .message .texts p {
