--- a/client/app/telegram/chat/chat.module.css
+++ b/client/app/telegram/chat/chat.module.css
@@ -101,9 +101,9 @@
 
   .chat .center .message .texts .img {
     width: 100%;
-    height: 300px;
+    height: auto;
     border-radius: 10px;
-    object-fit: cover;
+    object-fit: contain;
     margin-bottom: -12px;
   }
   
