--- a/client/app/telegram/list/chatList/chatList.module.css
+++ b/client/app/telegram/list/chatList/chatList.module.css
@@ -63,6 +63,7 @@
     cursor: pointer;
     border-bottom: 1px solid #dddddd35;
     transition: opacity 0.15s;
+    width: 100%;
 }
 
 .chatList .item:hover {
