--- a/client/app/telegram/chat/chat.module.css
+++ b/client/app/telegram/chat/chat.module.css
@@ -1,129 +1,154 @@
 .chat {
-  flex: 2;
-  border-left: 1px solid #dddddd35;
-  border-right: 1px solid #dddddd35;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+    flex: 2;
+    border-left: 1px solid #dddddd35;
+    border-right: 1px solid #dddddd35;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .chat .top {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid #dddddd35;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #dddddd35;
 }
 
 .chat .top .user {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .chat .top .user .avatarImg {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  object-fit: cover;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .chat .top .user .texts {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .chat .top .user .texts .span {
-  font-size: 18px;
-  font-weight: bold;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .chat .top .user .texts .p {
-  font-size: 14px;
-  font-weight: 300;
-  color: #a5a5a5;
+    font-size: 14px;
+    font-weight: 300;
+    color: #a5a5a5;
 }
 
 .chat .top .icons {
-  display: flex;
-  gap: 20px;
+    display: flex;
+    gap: 20px;
 }
 
 .chat .top .icons .imgI {
-  width: 20px;
-  height: 20px;
+    width: 20px;
+    height: 20px;
 }
 
 .chat .center {
-  padding: 20px;
-  flex: 1;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+    padding: 20px;
+    flex: 1;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    position: relative;
 }
 
 .chat .center::-webkit-scrollbar {
     width: 8px;
-  }
-  
-  .chat .center::-webkit-scrollbar-track {
+}
+
+.chat .center::-webkit-scrollbar-track {
     background: transparent;
-  }
-  
-  .chat .center::-webkit-scrollbar-thumb {
+}
+
+.chat .center::-webkit-scrollbar-thumb {
     background: rgba(17, 25, 40, 0.75);
     border-radius: 10px;
-  }
-  
+}
+
+.chat .center .suspense {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 .chat .center .message {
     max-width: 70%;
     display: flex;
     gap: 20px;
-  }
+}
 
-  .chat .center .messageOwn {
+.chat .center .messageOwn {
     align-self: flex-end;
-  }
+}
 
-  .chat .center .messageOwn .texts .p {
+.chat .center .messageOwn .sendername {
+    text-align: right;
+}
+
+.chat .center .messageOwn .texts .p {
     background-color: #5555553a;
-  }
+}
 
-  .chat .center .message .avatarImg {
+.chat .center .message .avatarImg {
     width: 30px;
     height: 30px;
     border-radius: 50%;
     object-fit: cover;
-  }
+}
 
-  .chat .center .message .texts .img {
+.chat .center .message .texts .img {
     width: 100%;
     height: auto;
     border-radius: 10px;
     object-fit: contain;
     margin-bottom: -12px;
-  }
-  
-  .chat .center .message .texts p {
+}
+
+.chat .center .message .texts {
+    position: relative;
+}
+
+.chat .center .message .texts p {
     padding: 20px;
     background-color: rgba(17, 25, 40, 0.3);
     border-radius: 10px;
-  }
-  
-  .chat .center .message .texts .span {
-    font-size: 13px;
-  }
-  
+}
 
-  .chat .center .message .texts {
+.chat .center .message .texts .span {
+    font-size: 13px;
+}
+
+.chat .center .message .texts .timestamp {
+    position: absolute;
+    bottom: -2%;
+    right: 2%;
+}
+
+.chat .center .message .texts {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 5px;
-  }
+}
+
+.chat .center .message .texts .sendername {
+    font-weight: bold;
+    font-size: 1.05rem;
+}
 
 .chat .bottom {
     padding: 20px;
@@ -133,20 +158,20 @@
     border-top: 1px solid #dddddd35;
     gap: 20px;
     margin-top: auto;
-  }
+}
 
-  .chat .bottom .icons {
+.chat .bottom .icons {
     display: flex;
     gap: 20px;
-  }
+}
 
-  .chat .bottom .imgI {
+.chat .bottom .imgI {
     width: 20px;
     height: 20px;
     cursor: pointer;
-  }
+}
 
-  .chat .bottom .input {
+.chat .bottom .input {
     flex: 1;
     background-color: rgba(17, 25, 40, 0.5);
     border: none;
@@ -155,32 +180,32 @@
     padding: 20px;
     border-radius: 10px;
     font-size: 16px;
-  }
+}
 
-  .chat .bottom .input:disabled {
+.chat .bottom .input:disabled {
     cursor: not-allowed;
-  }
-  
-  .chat .bottom .emoji {
+}
+
+.chat .bottom .emoji {
     position: relative;
-  }
-  
-  .chat .bottom .emoji .picker {
+}
+
+.chat .bottom .emoji .picker {
     position: absolute;
     bottom: 50px;
     left: 0;
-  }
-  
-  .chat .bottom .sendButton {
+}
+
+.chat .bottom .sendButton {
     background-color: #555555;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-  }
-  
-  .chat .bottom .sendButton:disabled {
+}
+
+.chat .bottom .sendButton:disabled {
     background-color: #5555553a;
     cursor: not-allowed;
-  }
+}
