--- a/client/app/realTimeChat/authorization/login/LoginForm/LoginForm.module.css
+++ b/client/app/realTimeChat/authorization/login/LoginForm/LoginForm.module.css
@@ -120,3 +120,13 @@
 .avatarLabel:hover {
     text-decoration: underline;
   }
+
+  .passwordControl {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
