--- a/client/app/realTimeChat/realTimeChat.module.css
+++ b/client/app/realTimeChat/realTimeChat.module.css
@@ -7,6 +7,8 @@
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
   display: flex;
+  transition: margin-left 0.5s ease;
+  
 }
 
 .loading {
@@ -14,3 +16,4 @@
   align-items: center; /* выравниваем элемент по вертикали */
   justify-content: center; /* выравниваем элемент по горизонтали */
 }
+
