--- a/client/app/personalPage/personalPage.module.css
+++ b/client/app/personalPage/personalPage.module.css
@@ -1,14 +1,13 @@
 .container {
     margin-left: 4%;
-    width: 90vw;
-    height: 90vh;
+    width: 420px;
     background-color: rgba(17, 25, 40, 0.75);
     backdrop-filter: blur(19px) saturate(180%);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     display: flex;
     transition: margin-left 0.5s ease;
-    
+
     align-items: center; 
     justify-content: center; 
   }
