--- a/client/app/telegram/telegram.module.css
+++ b/client/app/telegram/telegram.module.css
@@ -7,4 +7,5 @@
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     display: flex;
+    transition: margin-left .5s ease;
   }
