--- a/client/app/vkontakte/chat/chat.module.css
+++ b/client/app/vkontakte/chat/chat.module.css
@@ -62,125 +62,192 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  position: relative;
 }
 
 .chat .center::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  .chat .center::-webkit-scrollbar-track {
-    background: transparent;
-  }
-  
-  .chat .center::-webkit-scrollbar-thumb {
-    background: rgba(17, 25, 40, 0.75);
-    border-radius: 10px;
-  }
-  
+  width: 8px;
+}
+
+.chat .center::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.chat .center::-webkit-scrollbar-thumb {
+  background: rgba(17, 25, 40, 0.75);
+  border-radius: 10px;
+}
+
+.chat .center .suspense {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 .chat .center .message {
-    max-width: 70%;
-    display: flex;
-    gap: 20px;
-  }
+  max-width: 70%;
+  display: flex;
+  gap: 20px;
+}
 
-  .chat .center .messageOwn {
-    align-self: flex-end;
-  }
+.chat .center .messageOwn {
+  align-self: flex-end;
+}
 
-  .chat .center .messageOwn .texts .p {
-    background-color: #5555553a;
-  }
+.chat .center .messageOwn .sendername {
+  text-align: right;
+}
 
-  .chat .center .message .avatarImg {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
+.chat .center .messageOwn .texts .p {
+  background-color: #5555553a;
+}
 
-  .chat .center .message .texts .img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    object-fit: contain;
-    margin-bottom: -12px;
-  }
-  
-  .chat .center .message .texts p {
-    padding: 20px;
-    background-color: rgba(17, 25, 40, 0.3);
-    border-radius: 10px;
-  }
-  
-  .chat .center .message .texts .span {
-    font-size: 13px;
-  }
-  
+.chat .center .message .avatarImg {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
 
-  .chat .center .message .texts {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
+.chat .center .message .texts .img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  object-fit: contain;
+  margin-bottom: -12px;
+}
+
+.chat .center .message .texts {
+  position: relative;
+}
+
+.chat .center .message .texts p {
+  padding: 20px;
+  background-color: rgba(17, 25, 40, 0.3);
+  border-radius: 10px;
+}
+
+.chat .center .message .texts .span {
+  font-size: 13px;
+}
+
+.chat .center .message .texts .timestamp {
+  position: absolute;
+  bottom: -2%;
+  right: 2%;
+}
+
+.chat .center .message .texts {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.chat .center .message .texts .sendername {
+  font-weight: bold;
+  font-size: 1.05rem;
+}
 
 .chat .bottom {
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-top: 1px solid #dddddd35;
-    gap: 20px;
-    margin-top: auto;
-  }
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #dddddd35;
+  gap: 20px;
+  margin-top: auto;
+}
 
-  .chat .bottom .icons {
-    display: flex;
-    gap: 20px;
-  }
+.chat .bottom .icons {
+  display: flex;
+  gap: 20px;
+}
 
-  .chat .bottom .imgI {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-  }
+.chat .bottom .imgI {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
 
-  .chat .bottom .input {
-    flex: 1;
-    background-color: rgba(17, 25, 40, 0.5);
-    border: none;
-    outline: none;
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    font-size: 16px;
-  }
+.chat .bottom .input {
+  flex: 1;
+  background-color: rgba(17, 25, 40, 0.5);
+  border: none;
+  outline: none;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 16px;
+}
 
-  .chat .bottom .input:disabled {
-    cursor: not-allowed;
-  }
-  
-  .chat .bottom .emoji {
-    position: relative;
-  }
-  
-  .chat .bottom .emoji .picker {
-    position: absolute;
-    bottom: 50px;
-    left: 0;
-  }
-  
-  .chat .bottom .sendButton {
-    background-color: #555555;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .chat .bottom .sendButton:disabled {
-    background-color: #5555553a;
-    cursor: not-allowed;
-  }
+.chat .bottom .input:disabled {
+  cursor: not-allowed;
+}
+
+.chat .bottom .emoji {
+  position: relative;
+}
+
+.chat .bottom .emoji .picker {
+  position: absolute;
+  bottom: 50px;
+  left: 0;
+}
+
+.chat .bottom .sendButton {
+  background-color: #555555;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.chat .bottom .sendButton:disabled {
+  background-color: #5555553a;
+  cursor: not-allowed;
+}
+
+.chat .mediaField {
+  width: max-content;
+  height: max-content;
+  padding: 30px;
+  background-color: rgba(17, 25, 40, 0.781);
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: opacity 0.5s;
+}
+
+.chat .mediaField .input {
+  flex: 1;
+  background-color: rgba(17, 25, 40, 0.5);
+  border: none;
+  outline: none;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 16px;
+  border: 1px solid white;
+}
+
+.chat .mediaField button {
+  margin: 5px;
+  background-color: #555555;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.chat .mediaField button:disabled {
+  background-color: #5555553a;
+  cursor: not-allowed;
+}
