--- a/client/app/components/loginForm/loginForm.module.css
+++ b/client/app/components/loginForm/loginForm.module.css
@@ -37,8 +37,20 @@
     color: #fff;
 }
 
+.inputBox input[type=number]::-webkit-inner-spin-button,
+.inputBox input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.inputBox input[type=number] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
+
 .inputBox .icon{
     position: absolute;
+    display: flex;
     right: 20px;
     top: 50%;
     transform: translateY(-50%);
@@ -73,11 +85,20 @@
     border: none;
     outline: none;
     border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
     color: #333;
     font-weight: 700;
+    transition: box-shadow .3s ease;
+}
+
+.wrapper button:hover {
+    box-shadow: inset 0 0 10px rgba(0,0,0, .8);
+}
+
+.wrapper button:active {
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
 .wrapper .registerLink{
