--- a/client/app/components/navbar/navbar.module.css
+++ b/client/app/components/navbar/navbar.module.css
@@ -1,4 +1,4 @@
-.sidebar{
+.sidebar {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,50 +6,43 @@
     height: 100%;
     background: transparent;
     backdrop-filter: blur(40px);
-    border-right: 2px solid rgba(255, 255, 255, .2);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    border-right: 2px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 6px 14px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
-.sidebar .flexColumn {
-    /* margin-top: 800% !important; */
-  }
-
- .avatarImg {
+.avatarImg {
     width: 30px;
     height: 30px;
     border-radius: 50%;
     object-fit: cover;
     margin-right: 5%;
     margin-left: 10px;
-
-  }
-
+}
 
 .sidebar.active {
     width: 260px;
 }
 
-
-.sidebar .logoMenu{
+.sidebar .logoMenu {
     display: flex;
     align-items: center;
     width: 100%;
     height: 70px;
 }
 
-.sidebar .logoMenu .logo{
+.sidebar .logoMenu .logo {
     font-size: 25px;
     color: #fff;
     pointer-events: none;
     opacity: 0;
-    transition: .3s;
+    transition: 0.3s;
 }
 
-.sidebar.active .logoMenu .logo{
+.sidebar.active .logoMenu .logo {
     opacity: 1;
-    transition-delay: .2s;
+    transition-delay: 0.2s;
 }
 
 .sidebar .logoMenu .menuToggleBtn {
@@ -63,7 +56,7 @@
     text-align: center;
     line-height: 40px;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .sidebar.active .logoMenu .menuToggleBtn {
@@ -83,7 +76,6 @@
     line-height: 50px;
 }
 
-
 .list .listItem a {
     display: flex;
     align-items: center;
@@ -92,7 +84,7 @@
     text-decoration: none;
     border-radius: 6px;
     white-space: nowrap;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .list .listItem .listItemIcon {
@@ -100,16 +92,13 @@
     margin-left: 15px;
 }
 
-
-  
-
-.sidebar .list .listItem span{
+.sidebar .list .listItem span {
     width: 0px;
 }
 
 .list .listItemActive a,
 .list .listItem a:hover {
-    background: rgba(255, 255, 255, .2);
+    background: rgba(255, 255, 255, 0.2);
 }
 
 .list .listItem a i {
@@ -122,10 +111,10 @@
 .sidebar .linkName {
     opacity: 0;
     pointer-events: none;
-    transition: .3s;
+    transition: 0.3s;
 }
 
-.sidebar.active .linkName{
+.sidebar.active .linkName {
     opacity: 1;
     pointer-events: auto;
 }
