--- a/client/app/telegram/telegram.module.css
+++ b/client/app/telegram/telegram.module.css
@@ -9,3 +9,9 @@
     display: flex;
     transition: margin-left .5s ease;
   }
+
+.list{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+}
