--- a/client/app/vkontakte/vk.module.css
+++ b/client/app/vkontakte/vk.module.css
@@ -8,3 +8,9 @@
     border: 1px solid rgba(255, 255, 255, 0.125);
     display: flex;
   }
+
+.list{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+}
